fix content text spacing

--- a/src/sass/global/global.sass
+++ b/src/sass/global/global.sass
@@ -146,6 +146,7 @@ nav.navbar
         font-family: $barlow
         line-height: 1.8rem
         font-weight: 100
+        margin-bottom: 3rem
 
     .planet-data
         display: flex
